# Emotion-CNN-Activation-Visualizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package-conda.yml
Face Data/: Dockerfile  PROJECT_OVERVIEW.txt  README.md  activation_maps_demo.ipynb  azure-webapp.yaml  create_notebook.py  docker.txt  environment.yml  index.html  requirements.txt  streamlit_app.py  train_emotion_model.py  visualize_activations.py  yml.txt
face_data/: streamlit_app.py  train_emotion_model.py  visualize_activations.py
