[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "face_data"
version = "0.1.0"
description = "A package for face data processing and visualization."
authors = [
    { name="Ashwin Mehta", email="ashwinmehta1234500@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/0011Ashwin/Emotion-CNN-Activation-Visualizer" 